--- a/backend/api/templates/confirmation.html
+++ b/backend/api/templates/confirmation.html
@@ -2,5 +2,5 @@
 Hi {{ user.username }},
 Please click on the link to confirm your registration,
 
-http://{{ domain }}{% url 'confirmation:activate' user_id_base_64=user_id_base_64 token=token %}
+http://{{ domain }}{% url 'activate' user_id_base_64=user_id_base_64 token=token %}
 {% endautoescape %}
